--- a/React_FrontendV2/index.html
+++ b/React_FrontendV2/index.html
@@ -8,6 +8,7 @@
 		<link rel="icon" type="image" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>MyRRHH</title>
+		<script type="module" src="/src/assets/js/color-modes.js"></script>
 	</head>
 	<body>
 		<div id="root"></div>
